Dont show teachers, if none has been selected

--- a/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
@@ -205,7 +205,7 @@ view_mode ? view_mode|clean_class,
                 {# End - action button #}
 
                 {# Begin - teacher #}
-                {% if content.field_vih_cource_contact_person %}
+                {% if node.field_vih_cource_contact_person.value %}
                     <div class="partial partial--teacher">
                         <div class="partial__heading">
                             <h2 class="partial__heading__title heading-h4">{{ 'Do you have any questions about this class?' | trans }}</h2>
