--- a/docroot/themes/custom/site/templates/page/page.html.twig
+++ b/docroot/themes/custom/site/templates/page/page.html.twig
@@ -111,5 +111,9 @@
     <div class="layout__obfuscator"></div>
     <!-- End - obfuscator -->
 
+    {# Begin - cookie popup #}
+    {{ drupal_block('popup_cta') }}
+    {# End - cookie popup #}
+
 </div>
 <!-- End - wrapper -->
