--- a/docroot/themes/custom/site/src/styles/theme/components/_footer.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_footer.scss
@@ -52,7 +52,6 @@ $md-footer-bottom-padding-top-bottom: 55px;
         font-size: $font-size-h4;
         color: #fff;
         text-transform: uppercase;
-        font-family: 'Open Sans', sans-serif;
         padding: 18px 0;
         margin: 0;
       }
@@ -99,6 +98,10 @@ $md-footer-bottom-padding-top-bottom: 55px;
         padding-bottom: 0;
       }
     }
+  }
+
+  .region {
+    margin-bottom: $grid-gutter-width;
   }
 }
 
