Apply new structure of modal

--- a/docroot/themes/custom/site/templates/taxonomy-term/list-advanced/taxonomy-term--vih-class--list-advanced.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/list-advanced/taxonomy-term--vih-class--list-advanced.html.twig
@@ -37,22 +37,28 @@
     <!-- End - action -->
 
     <!-- Begin - modal -->
-    <div class="modal fade" id="class-modal-cp-{{ term.id }}" role="dialog">
-        <div class="modal-dialog">
+    <div class="modal fade" id="class-modal-cp-{{ term.id }}" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
-                <div class="modal-header"
-                     style="background-image: url('{{ file_url(term.field_vih_class_image.entity.fileuri) }}'); background-size: cover">
-                    <div class="modal-header-close">
-                        <button type="button" class="close" data-dismiss="modal">×</button>
-                    </div>
 
-                    <div class="modal-header-title"><h4 class="modal-title">{{ name }}</h4></div>
-                    <div class="diagonal-end"></div>
+                {# Begin - header #}
+                <div class="modal-header" style="background-image: url({{ term.field_vih_class_image.entity.fileuri | image_style('modal') }});">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="{{ 'Close' | trans }}">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+
+                    <h3 class="modal-title heading-h1">
+                        {{ name }}
+                    </h3>
                 </div>
+                {# End - header #}
 
+                {# Begin - body #}
                 <div class="modal-body">
                     {{ content.description }}
                 </div>
+                {# End - body #}
+
             </div>
         </div>
     </div>
