--- a/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class-package--vih-class-package-accordion.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class-package--vih-class-package-accordion.html.twig
@@ -17,75 +17,100 @@
         <div class="col-sm-8">
             <p>{{ description|striptags }}</p>
         </div>
-        <div class="col-sm-4 align-r">
+        <div class="col-sm-4">
+            <div class="text-right">
+                <button type="button" class="btn btn-default" data-toggle="modal" data-target="#class-modal-cp-{{ term.id }}">
+                    {{ 'Se fag' | trans }}
+                </button>
+            </div>
 
-            {#popup start#}
-            <button type="button" class="btn btn-default" data-toggle="modal" data-target="#class-modal-cp-{{ term.id }}">
-                {{ 'Se fag' | trans }}
-            </button>
-
-            <div class="modal fade" id="class-modal-cp-{{ term.id }}" role="dialog">
-                <div class="modal-dialog">
+            {# Begin - modal #}
+            <div class="modal fade" id="class-modal-cp-{{ term.id }}" tabindex="-1" role="dialog">
+                <div class="modal-dialog modal-lg" role="document">
                     <div class="modal-content">
-                        <div class="modal-header"
-                             style="background-image: url('{{ elements['#background_image'] }}'); background-size: cover">
-                            <div class="modal-header-close">
-                                <button type="button" class="close" data-dismiss="modal">×</button>
-                            </div>
 
-                            <div class="modal-header-title"><h4 class="modal-title">{{ name }}</h4></div>
-                            <div class="diagonal-end"></div>
+                        {# Begin - header #}
+                        <div class="modal-header" style="background-image: url('{{ elements['#background_image'] }}');">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="{{ 'Close' | trans }}">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+
+                            <h3 class="modal-title heading-h1">
+                                {{ name }}
+                            </h3>
                         </div>
+                        {# End - header #}
 
-
+                        {# Begin - body #}
                         <div class="modal-body">
-                            <h4>{{ name }}</h4>
-                            <p class="modal-course-description">
-                                {{ description|striptags }}
-                            </p>
+                            <h2>{{ name }}</h2>
 
-                            <div class="panel-group" id="tabs-class-package-{{ term.id }}">
-                                <div class="panel-heading blue">
-                                    <h4 class="panel-title"><a>{{ "Liste over fag i "|trans }}{{ term.name.value }}</a>
-                                    </h4>
-                                </div>
-
-                                <div class="panel panel-default white-border-bottom">
-                                    <div class="panel-heading tab-heading">
-                                        <div class="btn-group" data-toggle="buttons" style="height:50px;">
-                                            {% for key,slot in elements['#slots'] %}
-                                                <label class="tabs">
-                                                    <a data-toggle="collapse"
-                                                       data-parent="#tabs-class-package-{{ term.id }}"
-                                                       href="#tabs-class-package-{{ term.id }}-slot-{{ key }}"
-                                                       class="tabs-toggle">
-                                                        {{ slot.name }}
-                                                    </a>
-                                                </label>
-                                            {% endfor %}
-                                        </div>
-                                    </div>
-
-                                    {% for key,slot in elements['#slots'] %}
-                                        <div id="tabs-class-package-{{ term.id }}-slot-{{ key }}"
-                                             class="panel-collapse collapse">
-                                            <div class="panel-body modal-class">
-                                                <div class="panel-body__zero-padding">
-                                                    {% for class in slot['classes'] %}
-                                                        {{ class }}
-                                                    {% endfor %}
-                                                </div>
-                                            </div>
-                                        </div>
-                                    {% endfor %}
+                            <div class="partial">
+                                <div class="partial__body">
+                                    <p>{{ description|striptags }}</p>
                                 </div>
                             </div>
+
+                            <!-- Begin - class packages -->
+                            <div class="boxy boxy--class-packages boxy--class-packages--list-advanced">
+                                <div class="boxy__body">
+
+                                    <!-- Begin - panels -->
+                                    <div class="panel-group" id="tabs-class-package-{{ term.id }}" role="tablist">
+
+                                        <div class="panel-group__heading">
+                                            <h4 class="panel-group__heading__title">
+                                                {{ 'Liste over fag i ' | trans }}{{ term.name.value }}
+                                            </h4>
+                                        </div>
+
+                                        {% for key, slot in elements['#slots'] %}
+                                            <div class="panel panel-default">
+
+                                                <!-- Begin - heading -->
+                                                <div class="panel-heading" id="heading-{{ class_package_id }}">
+                                                    <h4 class="panel-title heading-h5">
+                                                        <a role="button" data-toggle="collapse"
+                                                           data-parent="#tabs-class-package-{{ term.id }}"
+                                                           href="#tabs-class-package-{{ term.id }}-slot-{{ key }}"
+                                                           aria-expanded="false"
+                                                           aria-controls="collapse-{{ class_package_id }}">
+                                                            {{ slot.name }}
+                                                        </a>
+                                                    </h4>
+                                                </div>
+                                                <!-- End - heading -->
+
+                                                <!-- Begin - body -->
+                                                <div id="tabs-class-package-{{ term.id }}-slot-{{ key }}"
+                                                     class="panel-collapse collapse" role="tabpanel">
+
+                                                    <div class="panel-body">
+                                                        {% for class in slot['classes'] %}
+                                                            {{ class }}
+                                                        {% endfor %}
+                                                    </div>
+                                                </div>
+                                                <!-- End - body -->
+
+                                            </div>
+                                        {% endfor %}
+
+                                    </div>
+                                    <!-- End - panels -->
+
+                                </div>
+                            </div>
+                            <!-- End - class packages -->
+
                         </div>
+                        {# End - body #}
+
                     </div>
                 </div>
             </div>
-        </div>
-        {#popup end#}
+            {# End - modal #}
 
+        </div>
     </div>
 </div>
