--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-class-selection-radios.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-class-selection-radios.html.twig
@@ -19,24 +19,28 @@
             <!-- End - action -->
 
             {# Begin - modal #}
-            <div class="modal fade" id="class-modal-{{ radios[delta]['#id'] }}" role="dialog">
-                <div class="modal-dialog">
+            <div class="modal fade" id="class-modal-cp-{{ term.id }}" tabindex="-1" role="dialog">
+                <div class="modal-dialog modal-lg" role="document">
                     <div class="modal-content">
-                        <div class="modal-header" style="background-image: url('{{ file_url(radios['#classes']['radio_selection'][delta]['#taxonomy_term'].field_vih_class_image.entity.fileuri) }}');">
-                            <div class="modal-header-close">
-                                <button type="button" class="close" data-dismiss="modal">×</button>
-                            </div>
 
-                            <div class="modal-header-title">
-                                <h4 class="modal-title">{{ radios['#classes']['radio_selection'][delta]['#taxonomy_term'].getName }}</h4>
-                            </div>
+                        {# Begin - header #}
+                        <div class="modal-header" style="background-image: url('{{ radios['#classes']['radio_selection'][delta]['#taxonomy_term'].field_vih_class_image.entity.fileuri | image_style('modal') }}');">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="{{ 'Close' | trans }}">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
 
-                            <div class="diagonal-end"></div>
+                            <h3 class="modal-title heading-h1">
+                                {{ radios['#classes']['radio_selection'][delta]['#taxonomy_term'].getName }}
+                            </h3>
                         </div>
+                        {# End - header #}
 
+                        {# Begin - body #}
                         <div class="modal-body">
                             {{ radios['#classes']['radio_selection'][delta]['#taxonomy_term'].getDescription|raw }}
                         </div>
+                        {# End - body #}
+
                     </div>
                 </div>
             </div>
