Improved UI of file paragraph

--- a/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_loader.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_loader.scss
@@ -4,8 +4,8 @@
 @import "class-groups-accordion";
 @import "video";
 @import "single-class-group";
+@import "file";
 
 // Files below needs to be cleaned up
-@import "_paragraph-type-file";
 @import "_paragraph-type-teacher-class-description";
 @import "_paragraph-type-user-quote";
