Format prices throughout the site as in the design

--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-short-course-order-form.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-short-course-order-form.html.twig
@@ -74,7 +74,9 @@
                             </h4>
                         </div>
                         <div class="boxy__body">
-                            DKK <div id="vih-course-price">{{ form['price'] }}</div>
+                            <div id="vih-course-price">
+                                {{ form['price'] }}
+                            </div>
                         </div>
                     </div>
                     <!-- End - price -->
