--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-thank-you-page.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-thank-you-page.html.twig
@@ -6,7 +6,7 @@
 
   <div class="row">
     <div class="col-xs-12 tilmeldings-knap">
-      <a href="{{ url('<front>') }}" class="btn-arrow">
+      <a href="{{ url('<front>') }}" class="btn btn-success">
         {{ "Tilbage til forside"|t }}
       </a>
     </div>
