Pretty user pages
- user forms
- user entity display

--- a/docroot/themes/custom/site/templates/page/page.html.twig
+++ b/docroot/themes/custom/site/templates/page/page.html.twig
@@ -81,7 +81,7 @@
                     <!-- Begin - content -->
                     <a id="main-content"></a>
 
-                    {% if node or user %}
+                    {% if node %}
                         {{ page.content }}
                     {% else %}
                         <section class="sectioned sectioned--content">
