course and event confirmation improvements

--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-short-course-order-form.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-short-course-order-form.html.twig
@@ -5,6 +5,14 @@
 <section class="sectioned sectioned--content">
     <div class="sectioned__inner">
         <div class="container">
+            <div class="row">
+              <div class="col-xs-12 tilmeldings-knap">
+                <a href="{{ form['#course']['url'] }}" class="btn-arrow">
+                  {{ "Back to course"|t }}
+                </a>
+              </div>
+            </div>
+
             <div class="partial">
                 <div class="partial__heading">
                     <h2 class="partial__heading__title">
@@ -75,7 +83,7 @@
                         </div>
                         <div class="boxy__body">
                             <div id="vih-course-price">
-                                {{ form['price'] }}
+                              {{ form['price'] }}
                             </div>
                         </div>
                     </div>
