--- a/docroot/themes/custom/site/src/styles/theme/components/boxy/_price.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/boxy/_price.scss
@@ -31,6 +31,9 @@
   #vih-course-price {
     display: inline-block;
   }
+  #vih-event-price {
+    display: inline-block;
+  }
 }
 
 // --------------------------------------------------
