--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-event-order-form.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-event-order-form.html.twig
@@ -5,6 +5,13 @@
 <section class="sectioned sectioned--content" {{ content_attributes.addClass('content') }}>
     <div class="sectioned__inner">
         <div class="container">
+            <div class="row">
+              <div class="col-xs-12 tilmeldings-knap">
+                <a href="{{ form['#event']['url'] }}" class="btn-arrow">
+                  {{ "Back to event"|t }}
+                </a>
+              </div>
+            </div>
 
             <div class="sectioned__heading">
                 <h2 class="sectioned__heading__title">
@@ -41,7 +48,7 @@
                 <div class="partial__body">
                     {#{{ form['personalDataLeft'] }}#}
 
-                    {{ form['participants_container'] }}
+                    {{ form['participantsContainer'] }}
 
                     {{ form['message'] }}
                 </div>
@@ -55,6 +62,23 @@
                 </div>
             </div>
             <!-- End - form controls -->
+
+
+            <!-- Begin - price -->
+            <div class="boxy boxy--price">
+              <div class="boxy__heading">
+                <h4 class="boxy__heading__title">
+                  {{ 'Total price' | trans }}
+                </h4>
+              </div>
+              <div class="boxy__body">
+                <div id="vih-event-price">
+                  {{ form['price'] }}
+                </div>
+              </div>
+            </div>
+            <!-- End - price -->
+
 
         </div>
     </div>
