Add notify - remove Popup CTA

--- a/docroot/themes/custom/site/src/styles/theme/components/_loader.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_loader.scss
@@ -11,6 +11,7 @@
 @import "footer";
 @import "button";
 @import "navbar";
+@import "notify";
 @import "angled-background";
 
 @import "time-period";
