--- a/docroot/themes/custom/site/src/styles/theme/entity/paragraph/field/_heading.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/paragraph/field/_heading.scss
@@ -14,64 +14,69 @@
 // Styling
 // --------------------------------------------------
 
-// Heading
-.field--name-field-heading {
-  @extend h2;
+.paragraph {
 
-  margin-top: 0;
+  .field--name-field-heading {
+    @extend h2;
 
-  text-transform: uppercase;
+    margin-top: 0;
+
+    text-transform: uppercase;
+  }
 }
 
 // --------------------------------------------------
 // Variants
 // --------------------------------------------------
 
-// Background image
-.sectioned--skewed--background-image {
+.paragraph {
 
-  .field--name-field-heading {
-    color: #fff;
+  // Background image
+  &.sectioned--skewed--background-image {
+
+    .field--name-field-heading {
+      color: #fff;
+    }
   }
-}
 
-// White
-.sectioned--skewed--background-color-white {
+  // White
+  &.sectioned--skewed--background-color-white {
 
-  .field--name-field-heading {
-    color: $headings-color;
+    .field--name-field-heading {
+      color: $headings-color;
+    }
   }
-}
 
-// Light gray
-.sectioned--skewed--background-color-light-gray {
+  // Light gray
+  &.sectioned--skewed--background-color-light-gray {
 
-  .field--name-field-heading {
-    color: $headings-color;
+    .field--name-field-heading {
+      color: $headings-color;
+    }
   }
-}
 
-// Gray
-.sectioned--skewed--background-color-gray {
+  // Gray
+  &.sectioned--skewed--background-color-gray {
 
-  .field--name-field-heading {
-    color: $headings-color;
+    .field--name-field-heading {
+      color: $headings-color;
+    }
   }
-}
 
-// Primary
-.sectioned--skewed--background-color-primary {
+  // Primary
+  &.sectioned--skewed--background-color-primary {
 
-  .field--name-field-heading {
-    color: $btn-primary-color;
+    .field--name-field-heading {
+      color: $btn-primary-color;
+    }
   }
-}
 
-// Secondary
-.sectioned--skewed--background-color-secondary {
+  // Secondary
+  &.sectioned--skewed--background-color-secondary {
 
-  .field--name-field-heading {
-    color: $btn-secondary-color;
+    .field--name-field-heading {
+      color: $btn-secondary-color;
+    }
   }
 }
 
