--- a/docroot/themes/custom/site/src/styles/theme/entity/paragraph/field/_highlighted.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/paragraph/field/_highlighted.scss
@@ -14,68 +14,67 @@
 // Styling
 // --------------------------------------------------
 
-// Highlighted
-.field--name-field-highlighted {
-  @extend h5;
-  text-transform: uppercase;
-  font-weight: $headings-font-weight-bold;
+.paragraph {
+
+  .field--name-field-highlighted {
+    @extend h5;
+    text-transform: uppercase;
+    font-weight: $headings-font-weight-bold;
+  }
 }
 
 // --------------------------------------------------
 // Variants
 // --------------------------------------------------
 
-// Background image
-.sectioned--skewed--background-image {
+.paragraph {
 
-  // Highlighted
-  .field--name-field-highlighted {
-    color: #fff;
+  // Background image
+  &.sectioned--skewed--background-image {
+
+    .field--name-field-highlighted {
+      color: #fff;
+    }
   }
-}
 
-// White
-.sectioned--skewed--background-color-white {
+  // White
+  &.sectioned--skewed--background-color-white {
 
-  // Highlighted
-  .field--name-field-highlighted {
-    color: $brand-secondary;
+    .field--name-field-highlighted {
+      color: $brand-secondary;
+    }
   }
-}
 
-// Light gray
-.sectioned--skewed--background-color-light-gray {
+  // Light gray
+  &.sectioned--skewed--background-color-light-gray {
 
-  // Highlighted
-  .field--name-field-highlighted {
-    color: $brand-secondary;
+    .field--name-field-highlighted {
+      color: $brand-secondary;
+    }
   }
-}
 
-// Gray
-.sectioned--skewed--background-color-gray {
+  // Gray
+  &.sectioned--skewed--background-color-gray {
 
-  // Highlighted
-  .field--name-field-highlighted {
-    color: $brand-secondary;
+    .field--name-field-highlighted {
+      color: $brand-secondary;
+    }
   }
-}
 
-// Primary
-.sectioned--skewed--background-color-primary {
+  // Primary
+  &.sectioned--skewed--background-color-primary {
 
-  // Highlighted
-  .field--name-field-highlighted {
-    color: $brand-secondary;
+    .field--name-field-highlighted {
+      color: $brand-secondary;
+    }
   }
-}
 
-// Secondary
-.sectioned--skewed--background-color-secondary {
+  // Secondary
+  &.sectioned--skewed--background-color-secondary {
 
-  // Highlighted
-  .field--name-field-highlighted {
-    color: $text-color;
+    .field--name-field-highlighted {
+      color: $text-color;
+    }
   }
 }
 
